feat(auth): change password and revoke peers
